--- a/app/src/main/res/layout/activity_main_info.xml
+++ b/app/src/main/res/layout/activity_main_info.xml
@@ -56,6 +56,19 @@
 
         </androidx.appcompat.widget.Toolbar>
 
+        <EditText
+            android:id="@+id/edtNameResult"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/main"
+            android:backgroundTint="#F1E1E1"
+            android:padding="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/btnGoods"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.046"
+            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintTop_toBottomOf="@+id/fastText" />
+
         <TextView
             android:id="@+id/fastText"
             android:layout_width="wrap_content"
@@ -132,24 +145,6 @@
             app:layout_constraintVertical_bias="0.493"
             app:srcCompat="@drawable/ic_baseline_person_pin_24"
             tools:ignore="VectorDrawableCompat" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/edtNameResult"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/main"
-                android:backgroundTint="#F1E1E1"
-                android:padding="20dp"
-                android:layout_marginTop="250dp"
-                android:layout_marginLeft="130dp"/>
-
-        </LinearLayout>
-
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
