--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -128,7 +128,7 @@
             android:contentDescription="TODO"
             app:layout_constraintBottom_toTopOf="@+id/btnGoods"
             app:layout_constraintEnd_toStartOf="@+id/termText"
-            app:layout_constraintHorizontal_bias="0.457"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/ic_baseline_person_pin_24"
             tools:ignore="VectorDrawableCompat" />
@@ -137,7 +137,9 @@
             android:id="@+id/termText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="100dp"
+            android:layout_marginEnd="120dp"
+            android:background="#FFFFFF"
+            android:backgroundTint="#F1E1E1"
             android:text="로그인이 필요합니다"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/btnGoods"
